[package]
name = "algebra-core-derive"
version = "0.1.0"
edition = "2021"
description = "Derive macros for algebra-core traits"
license = "BSD-3-Clause"
repository = "https://github.com/shayne-fletcher/postbox"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
