[package]
name = "algebra-core"
version = "0.1.0"
edition = "2021"
description = "Core algebraic abstractions: Semigroup, Monoid, Group, and related traits"
license = "BSD-3-Clause"
repository = "https://github.com/shayne-fletcher/algebra-core"
readme = "README.md"

[features]
default = []
derive = ["algebra-core-derive"]

[dependencies]
algebra-core-derive = { path = "../algebra-core-derive", optional = true }

[dev-dependencies]
