[package]
name = "autodiff"
version = "0.1.0"
edition = "2021"
description = "Automatic differentiation for Rust"
license = "BSD-3-Clause"
repository = "https://github.com/shayne-fletcher/postbox"

[dependencies]
algebra-core = { version = "0.1.0", path = "../algebra-core" }
num-traits = "0.2"

[dev-dependencies]

[[example]]
name = "dual_transcendentals"
path = "examples/dual_transcendentals.rs"
